--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -15,4 +15,5 @@ jobs:
 
       - name: Push image to Docker Hub
         run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_HUB_SECRET }}
           docker push ironkaiii/devops-qr-code-api:ubuntu-latest
