--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -11,9 +11,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Docker image
-        run: docker build ./api/ -t ironkaiii/devops-qr-code-api:ubuntu-latest
+        run: |
+          docker build ./api/ -t ${{ secrets.DOCKER_USERNAME }}/devops-qr-code-api:ubuntu-latest
+          docker build ./front-end-nextjs/ -t ${{ secrets.DOCKER_USERNAME }}/devops-qr-code-web:ubuntu-latest
 
       - name: Push image to Docker Hub
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_HUB_SECRET }}
-          docker push ironkaiii/devops-qr-code-api:ubuntu-latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/devops-qr-code-api:ubuntu-latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/devops-qr-code-web:ubuntu-latest
